tests/ui/target-feature/forbidden-hardfloat-target-feature-attribute.stderr
error: target feature `d` cannot be enabled with `#[target_feature]`: this feature is incompatible with the target ABI
  --> $DIR/forbidden-hardfloat-target-feature-attribute.rs:10:18
   |
LL | #[target_feature(enable = "d")]
   |                  ^^^^^^^^^^^^

error: aborting due to 1 previous error

